chore: consume latest library changes

--- a/website/versioned_docs/version-1.0/tutorial/create-todo-list-app.mdx
+++ b/website/versioned_docs/version-1.0/tutorial/create-todo-list-app.mdx
@@ -15,7 +15,7 @@ keywords:
 
 ```tsx title="src/App.tsx"
 import { useState } from "react";
-import { todoStore } from "./store/todoStore";
+import { todoStore, Todo } from "./store/todoStore";
 import TodoList from "./components/TodoList";
 import TodoStats from "./components/TodoStats";
 import TodoFilters from "./components/TodoFilters";
