--- a/website/docs/tutorial/create-todo-list-app.mdx
+++ b/website/docs/tutorial/create-todo-list-app.mdx
@@ -15,12 +15,10 @@ keywords:
 
 ```tsx title="src/App.tsx"
 import { useState } from "react";
-import { todoStore } from "./store/todoStore";
+import { todoStore, Todo } from "./store/todoStore";
 import TodoList from "./components/TodoList";
 import TodoStats from "./components/TodoStats";
 import TodoFilters from "./components/TodoFilters";
-
-export type Todo = { id: number; text: string };
 
 export default function App() {
   const [text, setText] = useState("");
