docs: updating doc and example for v2

--- a/website/versioned_docs/version-1.0/tutorial/create-todo-list-app.mdx
+++ b/website/versioned_docs/version-1.0/tutorial/create-todo-list-app.mdx
@@ -173,7 +173,7 @@ export default function TodoStats() {
 For the complete code and demo, refer to the Codesandbox example below.
 
 ```mdx-code-block
-import {PlaygroundCardsRow} from '@site/src/components/Playground';
+import {TodoPlayground} from '@site/src/components/Playground';
 
-<PlaygroundCardsRow />
+<TodoPlayground />
 ```
