--- a/website/docs/tutorial/todo-list-app.mdx
+++ b/website/docs/tutorial/todo-list-app.mdx
@@ -1,8 +1,8 @@
 ---
 sidebar_position: 2
-id: create
-title: Create Todo List App
-slug: /tutorial/create-todo-list-app/
+id: todo-list
+title: Tutorial 1. Todo List App using `useStateGlobal`
+slug: /tutorial/todo-list-app/
 description: Todo list app
 keywords:
 - todo-list-app
@@ -10,6 +10,14 @@ keywords:
 ---
 
 # Todo List App
+
+In this tutorial, we'll be building a simple **todo-list** application. Our app will be able to do the following:
+
+- Add todo items
+- Edit todo items
+- Delete todo items
+- Filter todo items
+- Display useful stats
 
 **🔹 Step 1: Setup App in root project folder (`src/App.tsx`):**
 
@@ -173,7 +181,7 @@ export default function TodoStats() {
 For the complete code and demo, refer to the Codesandbox example below.
 
 ```mdx-code-block
-import {PlaygroundCardsRow} from '@site/src/components/Playground';
+import {TodoPlayground} from '@site/src/components/Playground';
 
-<PlaygroundCardsRow />
+<TodoPlayground />
 ```
