fix: updating useStore to work properly

--- a/website/docs/tutorial/ecommerce-app.mdx
+++ b/website/docs/tutorial/ecommerce-app.mdx
@@ -55,11 +55,10 @@ export default App;
 import { useStore } from "state-jet";
 import { useProductSlice, useCartSlice, useUserSlice } from "./slices";
 
-export const useEcommerceStore = () =>
-  useStore()(() => ({
-    products: useProductSlice(),
-    cart: useCartSlice(),
-    user: useUserSlice(),
+export const useEcommerceStore = () => useStore(() => ({
+  products: useProductSlice(),
+  cart: useCartSlice(),
+  user: useUserSlice(),
 }));
 ```
 
