--- a/website/versioned_docs/version-2.0/tutorial/todo-list-app.mdx
+++ b/website/versioned_docs/version-2.0/tutorial/todo-list-app.mdx
@@ -11,7 +11,7 @@ keywords:
 
 # Todo List App
 
-In this tutorial, we'll be building a simple **todo-list** application. Our app will be able to do the following:
+In this tutorial, we'll create a simple **to-do list** application with the following features:
 
 - Add todo items
 - Edit todo items
