--- a/website/versioned_docs/version-2.0/tutorial/ecommerce-app.mdx
+++ b/website/versioned_docs/version-2.0/tutorial/ecommerce-app.mdx
@@ -28,8 +28,9 @@ function App() {
   const store: any = useEcommerceStore();
 
   useEffect(() => {
+    const { productState } = store.products;
     // Load initial products
-    store.products.set({
+    productState.set({
       items: [
         { name: "Laptop", price: 999 },
         { name: "Phone", price: 599 },
