--- a/website/docs/tutorial/ecommerce-app.mdx
+++ b/website/docs/tutorial/ecommerce-app.mdx
@@ -77,7 +77,12 @@ import { useSlice } from "state-jet";
 const productSlice = useSlice("products");
 const cartSlice = useSlice("cart");
 
-export const useProductSlice = () => productSlice("productState", {});
+// Define multiple state values under one slice
+export const useProductSlice = () => ({
+  productState: productSlice("productState", {}),
+  productFilter: productSlice("productFilter", { search: "", category: "all" }),
+  productSort: productSlice("productSort", { order: "asc" }),
+});
 export const useCartSlice = () => cartSlice("cartState", {});
 ```
 
@@ -103,9 +108,9 @@ type CartType = {
 
 export const ProductList = () => {
   const store = useEcommerceStore();
-  const products: any = store.products;
+  const { productState }: any = store.products;
   const cart: any = store.cart;
-  const productSliceData: any = products.useState();
+  const productSliceData: any = productState.useState();
   const cartSliceData: any = cart.useState();
   const productItems: Array<ProductType> = productSliceData?.items || [];
   const cartItems: Array<CartType> = cartSliceData?.items || [];
